#1 motsch update #2 about section mobile bugfix

--- a/css/projects.css
+++ b/css/projects.css
@@ -94,6 +94,7 @@
   white-space: nowrap; /* Prevents line breaks */
   padding-top: 40px;
   padding-left: 5%;
+  padding-bottom: 40px;
 }
 
 #projects .projectheading h2 {
