--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ canvas {
 
 section {
   width: 90%;
-  height: 90vh;
-  min-height: auto;
+  min-height: 90vh;
+  height: auto;
   padding: 10px 5% 10px 5%;
 }
 
