--- a/css/typography.css
+++ b/css/typography.css
@@ -6,11 +6,12 @@
 h1 {
   text-transform: uppercase;
   font-size: 15vw;
+  line-height: 0.8;
 }
 
 h2 {
   font-size: 10vw;
-  line-height: 0.9;
+  line-height: 0.8;
   /*font-size: 30px;*/
 }
 
